--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,5 +15,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: go.mod
+
+      - name: Install dependencies
+        run: go mod download
+
+      - name: Install deps
+        run: make deps-lint
+
       - name: lint
         run: make lint
