--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,3 @@
-run:
-  skip-files:
-    - "preflight/containerutil/container_smoketest_grpc.go"
+linters-settings:
+  staticcheck:
+    checks: ["all", "-SA1019"]
